[tool.poetry]
name = "shippo-python-sdk-usage"
version = "0.1.0"
description = "Example project for using the Shippo Python SDK"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
shippo = "^3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
